[project]
name = "simclr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipynb>=0.5.1",
    "matplotlib>=3.10.1",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "standard-imghdr>=3.13.0",
    "tensorboard>=2.19.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "tsnecuda>=3.0.1",
]
